--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,47 @@
+/*** Global ****/
+
+body {
+    font-family: 'Montserrat', sans-serif;
+}
+
+
+
+
+/**** Navigation Bar *****/
+
+.navbar {
+    padding:0 0 4.5rem;
+}
+
+.navbar-brand {
+    color: #fff;
+    font-size: 2.5rem;
+    font-weight: bold;
+    font-family: "Ubuntu";
+}
+
+.nav-item {
+    padding: 0 18px;
+}
+
+.nav-link {
+    font-size: 1.2rem;
+    font-family: "Montserrat-Light"
+}
+
+/*** Download Buttons */
+
+.download-button {
+    margin: 5% 3% 5% 0;
+}
+
+/****Title Image */
+
+.title-image {
+    width: 60%;
+    transform: rotate(20deg);
+}
+
 /************Title************/
 .container-fluid {
     padding: 3% 15%;
@@ -5,13 +49,30 @@
 }
 
 h1 {
-    font-family: 'Montserrat-Black', sans-serif;
-    font-size: 3rem;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 3.5rem;
     line-height: 1.5;
-    font-weight: 900;
+    font-weight: 600;
+    
 
 }
 
 #title {
     background-color: #ff4c68;
+    color: #fff;
+}
+
+
+/*** Features Section */
+#features {
+height: 400px;
+background-color: yellowgreen;
+
+}
+
+.features-icon {
+    font-size: 3rem;
+    color: #EF8172;
+    padding: 10px 35%;
+    
 }
