--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,12 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
-
+h2 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 3rem;
+    line-height: 1.5;
+    font-weight: 700;
+}
 
 
 /**** Navigation Bar *****/
@@ -95,4 +100,36 @@ color: #8f8f8f;
 
 .features-icon:hover{
     color: #ff4c68;
+}
+
+/**** Testimonial Carousel Section */
+
+#testimonials {
+    
+    text-align: center;
+    background-color: #EF8172;
+    color: #fff;
+}
+
+.testimonial-image {
+    width: 10%;
+    border-radius: 100%;
+    margin: 20px;
+}
+
+.carousel-item {
+    padding: 7% 15%;
+
+}
+
+/*** Press Section */
+#press {
+    padding: 3%;
+    text-align: center;
+    background-color: #EF8172
+}
+
+.press-logo {
+width: 15%;
+margin: 20px 20px 50px
 }
