--- a/css/styles.css
+++ b/css/styles.css
@@ -133,3 +133,16 @@ color: #8f8f8f;
 width: 15%;
 margin: 20px 20px 50px
 }
+
+
+/*** Pricing Section */
+#pricing {
+padding: 100px;
+
+}
+
+.pricing-column {
+padding: 3% 2%
+
+}
+
